Add support for building real variant.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,18 @@ set( LIBNAME kiss_fft )
 
 add_library( ${LIBNAME} SHARED
 	kiss_fft.c
+	tools/kiss_fftr.c
+)
+
+target_include_directories( ${LIBNAME}
+	PRIVATE
+	${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 install(
-	FILES kiss_fft.h
+	FILES
+		kiss_fft.h
+		tools/kiss_fftr.h
 	DESTINATION include
 )
 
